# airmail

./: Cargo.toml
airmail-fst/: Cargo.toml  README.md
airmail-fst/src/: error.rs  fake_arr.rs  lib.rs  map.rs  stream.rs
airmail-fst/src/automaton/: mod.rs
airmail-fst/src/raw/: build.rs  error.rs  mod.rs  node.rs  ops.rs  pack.rs  registry.rs  registry_minimal.rs  tests.rs
airmail-fst/src/regex/: compile.rs  error.rs  mod.rs
airmail-indexer/: .gitignore  Cargo.toml
airmail-indexer/src/: common.rs
airmail-tokenizer/: Cargo.toml
airmail-tokenizer/src/: lib.rs
airmail-tokenizer/src/grammar/: locality.rs  mod.rs  street.rs
airmail-tokenizer/test_data/: localities.fst  roads.fst
airmail-wasm/: .gitignore  Cargo.toml  LICENSE_MIT  package.json  webpack.config.js
airmail-wasm/src/: fetch_directory.rs  fetch_directory.ts  index.tsx  lib.rs  worker.ts
airmail_lib/: .gitignore  Cargo.toml
airmail_lib/src/: feature.rs  lib.rs  model.rs  parser.rs  tagger.rs  tokenizer.rs
airmail_util/: Cargo.toml
airmail_util/src/: lib.rs  model.rs
airmail_wasm/: Cargo.toml
airmail_wasm/src/: .gitignore  lib.rs
airmail_wasm/tests/: web.rs
src/: lib.rs  lp_file_stream.rs  tokenizer.rs
