[package]
name = "airmail"
version = "0.1.0"
edition = "2021"

[features]
default = ["bins"]
bins = ["dep:clap", "dep:tokenizers", "dep:rayon"]

[dependencies]
fst = "0.4"
deunicode = "1.3.2"
rand = "0.8.5"
crfsuite = { version = "0.3.1" }
tokenizers = { version = "0.11.3", optional = true }
clap = { version = "3.2.8", features = ["cargo", "derive"], optional = true }
rayon = { version = "1.5.3", optional = true }

[profile.tiny]
inherits = "release"
lto = true
codegen-units = 1