[package]
name = "airmail-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbf = "0.2.8"
tokio = { version = "1", features = ["full"] }
clap = { version = "3.2.8", features = ["derive"] }
fst = { path = "../airmail-fst" }
highway = "0.8.0"
crossbeam = "0.8.2"
deunicode = "1.3.2"