[package]
name = "airmail-tokenizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
fst = { path = "../airmail-fst" }
deunicode = "1.3.2"
regex = "1"
autumn = "0.4.3"
lazy_static = "1.4.0"
