[package]
name = "airmail-wasm"
version = "0.1.0"
authors = ["Ellen Poe <ellen@ellenhp.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["dep:console_error_panic_hook"]

[dependencies]
backtrace = "0.3.59"
once_cell = "1.7.2"
serde_json = "1.0.64"
tantivy = {version="0.14.0", path="../tantivy", default-features=false, features=["wasm-bindgen"]}
wasm-bindgen = "0.2.74"
console_error_panic_hook = { version = "0.1.6", optional = true }

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
dwarf-debug-info = true

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false # no debug info otherwise