[package]
name = "airmail_util"
version = "0.1.0"
edition = "2021"

[dependencies]
fst = "0.4"
deunicode = "1.3.2"
rand = "0.8.5"
crfsuite = "0.3.1"
tokenizers = "0.11.3"
rayon = "1.5.3"
clap = { version = "3.2.8", features = ["cargo", "derive"] }
airmail_lib = { path = "../airmail_lib" }

[profile.tiny]
inherits = "release"
lto = true
codegen-units = 1